--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,20 @@ matplotlib
 transformers==4.5.1
 ujson
 openpyxl
-qgrid
+jupyter 
+jupyter-client 
+jupyter-console 
+jupyter-contrib-core 
+jupyter-contrib-nbextensions 
+jupyter-core 
+jupyter-highlight-selected-word 
+jupyter-latex-envs 
+jupyter-nbextensions-configurator 
+jupyter-server 
+jupyterlab 
+jupyterlab-pygments 
+jupyterlab-server 
+jupyter-flex
+tensorboard
+matplotlib
+mo-future
